Fix overflow in menu

--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -5911,9 +5911,6 @@ $min2ColWidth: 400px;
       }
 
       & > .input {
-        display: flex;
-        align-items: center;
-
         .flex {
           flex-wrap: nowrap;
 
